--- a/FrontEnd/jqxTreeAngular/src/styles.css
+++ b/FrontEnd/jqxTreeAngular/src/styles.css
@@ -1,6 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
 .tree {
-  display: flex;
-  justify-content: center;
+  display: block;
+  position: absolute;
 }
 
