mudanças visuais, finalização do projetin

--- a/FrontEnd/jqxTreeAngular/src/app/app.component.html
+++ b/FrontEnd/jqxTreeAngular/src/app/app.component.html
@@ -1,4 +1,4 @@
 <div class="tree">
-  <jqxTree [width]="922" [allowDrag]="false" #myTree [source]="records"style="border: none;">
+  <jqxTree [width]="800" [allowDrag]="false" #myTree [source]="records"style="border-radius: 20px; border-color: black;">
   </jqxTree>
 </div>
