--- a/FrontEnd/jqxTreeAngular/src/styles.css
+++ b/FrontEnd/jqxTreeAngular/src/styles.css
@@ -4,3 +4,11 @@
   justify-content: center;
 }
 
+html {
+  background-color: bisque;
+}
+
+.titulo, h2 {
+  display: flex;
+  justify-content: center;
+}
